# blog-api

./: .env.template  .gitignore  README.md  pyproject.toml
articles/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
articles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_article_date_created.py  0004_remove_article_comments_comment_article.py  0005_alter_comment_date_created.py
config/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
